optimized and reduced code